maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:10: error: ';' expected but 'while' found.
    }while(isOverBaggle())
     ^RandomMouseMaze:14: error: 'while' expected but '}' found.
} 
^